# Numerical-Solution-of-Partial-Differential-Equation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
applications/poisson_solver/: 2D_polygonal_Dirichlet_Poisson_problem.cpp  plot_solution.py
applications/polygon_dirichlet_poisson_solver/: 2D_polygonal_Dirichlet_Poisson_problem.cpp
applications/polygon_neumann_poisson_solver/: 2D_polygonal_Neumann_Poisson_problem.cpp
applications/utils/: application_utils.cpp  plot_grid.py  plot_solution.py  spy_CSR_matrix.py
applications/utils/include/: application_utils.hpp
docs/html/: 2_d__polygonal___dirichlet___poisson__problem_8cpp_source.html  2_d__polygonal___neumann___poisson__problem_8cpp_source.html  _iterative_solvers_8cpp_source.html  _sparse_matrix_c_s_r_8cpp_source.html  _sparse_matrix_c_s_r_8hpp_source.html  _sparse_matrix_solvers_8hpp_source.html  _specific_matrix_generators_8cpp_source.html  _specific_matrix_generators_8hpp_source.html  _test_core_8cpp_source.html  _test_poisson_matrix_8cpp_source.html  _test_sp_m_v_8cpp_source.html  _vector_operations_8cpp_source.html  _vector_operations_8hpp_source.html  annotated.html  annotated_dup.js  application__utils_8cpp_source.html  application__utils_8hpp_source.html  applications_2utils_2plot__solution_8py_source.html  class_sparse_matrix_c_s_r.html  classes.html  dir_0ebe7fc675a7077580364cdf1e6bfb37.html  dir_0ebe7fc675a7077580364cdf1e6bfb37.js  dir_0ebe7fc675a7077580364cdf1e6bfb37_dep.map  dir_0ebe7fc675a7077580364cdf1e6bfb37_dep.md5  dir_1e947528647632f810176f4e5e70788a.html  dir_1e947528647632f810176f4e5e70788a.js  dir_4555dfe72403056a4beabbce771ae441.html  dir_4555dfe72403056a4beabbce771ae441.js  dir_4555dfe72403056a4beabbce771ae441_dep.map  dir_4555dfe72403056a4beabbce771ae441_dep.md5  dir_876ea0fd0a4b50c46a0c76ee76e834b6.html  dir_876ea0fd0a4b50c46a0c76ee76e834b6.js  dir_876ea0fd0a4b50c46a0c76ee76e834b6_dep.map  dir_876ea0fd0a4b50c46a0c76ee76e834b6_dep.md5  dir_9ca6628b97370d9dd5f4625868a0b052.html  dir_9ca6628b97370d9dd5f4625868a0b052.js  dir_9ca6628b97370d9dd5f4625868a0b052_dep.map  dir_9ca6628b97370d9dd5f4625868a0b052_dep.md5  dir_a6e4fee11f07c3b70486e88fe92cbbdc.html  dir_a6e4fee11f07c3b70486e88fe92cbbdc.js  (+33 more)
docs/html/search/: all_0.js  all_10.js  all_15.js  all_17.js  all_19.js  all_1a.js  all_1c.js  all_1e.js  all_1f.js  all_2.js  all_21.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  functions_5.js  functions_6.js  functions_8.js  functions_b.js  namespaces_0.js  pages_1.js  pages_11.js  pages_14.js  pages_16.js  pages_17.js  pages_18.js  pages_19.js  pages_3.js  pages_4.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  (+7 more)
sparse_matrix_lib/docs/: Doxyfile  Output_TestCore.txt  Output_TestPoissonMatrix.txt  Output_TestSpMV.txt
sparse_matrix_lib/docs/html/: _sparse_matrix_c_s_r_8hpp_source.html  _sparse_matrix_solvers_8hpp_source.html  _specific_matrix_generators_8hpp_source.html  _vector_operations_8hpp_source.html  class_sparse_matrix_c_s_r-members.html  (+30 more)
sparse_matrix_lib/include/: SparseMatrixCSR.hpp  SparseMatrixSolvers.hpp  SpecificMatrixGenerators.hpp  VectorOperations.hpp
sparse_matrix_lib/src/: IterativeSolvers.cpp  SparseMatrixCSR.cpp  SpecificMatrixGenerators.cpp  VectorOperations.cpp
sparse_matrix_lib/test/: TestCore.cpp  TestPoissonMatrix.cpp  TestSpMV.cpp  plot_solution.py
(+33 files in other folders)
